tests/fixtures/invalid/float_bitor_int.py
# Cannot bitwise OR Float and Int
x: float = 1.0 | 1
